1998-06-01  Assar Westerlund  <assar@sics.se>
	and Ian Lance Taylor  <ian@cygnus.com>

	* configure.in: Check for GSSAPI headers individually.  Use a
	different set of GSSPI libraries if gssapi.h rather than
	gssapi/gssapi.h is found.  Adds Heimdal support.
	* configure, config.h.in: Rebuild.

1998-05-25  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* cvs.spec (%description): Rewrite to be slightly more verbose
	about the basic features.  Don't try to mention what CVS lacks.

1998-05-23  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* BUGS: Remove items about binary file bugs which were fixed
	approximately 6 months ago.

1998-04-28  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* TESTS: Add note about Solaris sort program (reported by Mark
	D. Baushke).

1998-03-16  Larry Jones  <larry.jones@sdrc.com>

	* configure.in: Simplify test for shadow password support since
	the code now handles the case where shadow passwords are supported
	but are not in use.
	* configure: Regenerated.

1998-03-07  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* TESTS: Remove note about SGI's XFS.  Someone reports that it
	works (I would assume due to the 13 Feb 1998, and earlier, changes
	to sanity.sh).

	* NEWS: Add item about PreservePermissions.  Fix unclear wording
	in gserver item.

1998-03-04  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* acconfig.h, configure.in: Add PRESERVE_PERMISSIONS_SUPPORT and
	always define it.
	* configure, config.h.in: Regenerated.

Tue Feb 17 18:32:36 1998  Ian Lance Taylor  <ian@cygnus.com>

	* configure.in: Add memmove back to AC_REPLACE_FUNCS list.
	* configure: Rebuild.

1998-02-16  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* TODO (190): Remove "failed to check out" from commit.c from
	lists of error messages suppressed by -q; it no longer is.

4 Feb 1998  Jim Kingdon

	* cvsnt.mak: The usual "because Visual C++ feels like it"
	changes.  These ones seem to have to do with reordering
	files and release versus debug configurations, mainly.
