@@ -4,6 +4,10 @@
 /* Define if you have GSSAPI with MIT Kerberos version 5 available.  */
 #undef HAVE_GSSAPI
 
+/* Define if GSS_C_NT_HOSTBASED_SERVICE is defined in the gssapi.h
+   header file.  Only relevant when using GSSAPI.  */
+#undef HAVE_GSS_C_NT_HOSTBASED_SERVICE
+
 /* Define if you want CVS to be able to be a remote repository client.  */
 #undef CLIENT_SUPPORT
 
